Revert "fixed left menu scroll on mobile. closes #47"
This reverts commit 1ba48cb3d43a77f6c6af297b6d5633479df7e9b2.

--- a/public/bootstrap/less/menu.less
+++ b/public/bootstrap/less/menu.less
@@ -276,7 +276,7 @@
     max-width: 106%;
   }
 
-  &.nano.pushed {
+  body.hover &.nano.pushed {
     top: 180px;
     .transition(400ms);
   }
@@ -359,6 +359,7 @@
   }
 
   @media @mobile {
+    position: static;
     // top: 110px;
     .menu-list__item {
       .menu-list__header {
